fix: set up orval

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"dev": "next dev",
 		"build": "cross-env NODE_ENV=production next build",
 		"start": "next start",
+		"generate-api": "orval --config ./orval.config.js",
 		"storybook": "start-storybook -p 6006 -s public",
 		"build-storybook": "build-storybook -s public"
 	},
@@ -28,10 +29,12 @@
 		"@storybook/addon-controls": "^6.3.8",
 		"@supabase/supabase-js": "^1.24.0",
 		"axios": "^0.21.1",
+		"faker": "^5.5.3",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
 		"lottie-react": "^2.1.0",
 		"next": "10.0.5",
+		"orval": "^6.2.3",
 		"path": "^0.12.7",
 		"react": "17.0.1",
 		"react-color": "^2.19.3",
