--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
 		"lottie-react": "^2.1.0",
+		"msw": "^0.35.0",
 		"next": "10.0.5",
 		"orval": "^6.2.3",
 		"path": "^0.12.7",
