--- a/package.json
+++ b/package.json
@@ -30,15 +30,19 @@
 		"@chakra-ui/react": "^1.6.8",
 		"@emotion/react": "^11.4.1",
 		"@emotion/styled": "^11.3.0",
+		"@fontsource/poppins": "^4.5.0",
 		"@storybook/addon-controls": "^6.3.8",
 		"@supabase/supabase-js": "^1.24.0",
 		"axios": "^0.21.1",
 		"faker": "^5.5.3",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
+		"i": "^0.3.7",
+		"lodash": "^4.17.21",
 		"lottie-react": "^2.1.0",
 		"msw": "^0.35.0",
 		"next": "10.0.5",
+		"npm": "^8.1.1",
 		"orval": "^6.2.3",
 		"path": "^0.12.7",
 		"react": "17.0.1",
