feat: next version 12

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"@capacitor/android": "^3.2.5",
+		"@capacitor/cli": "^3.2.5",
 		"@capacitor/core": "^3.2.5",
 		"@capacitor/ios": "^3.2.5",
 		"@chakra-ui/react": "^1.6.8",
@@ -32,25 +33,27 @@
 		"@emotion/styled": "^11.3.0",
 		"@fontsource/poppins": "^4.5.0",
 		"@storybook/addon-controls": "^6.3.8",
-		"@supabase/supabase-js": "^1.24.0",
+		"@storybook/react": "^6.3.12",
+		"@supabase/supabase-js": "^1.25.2",
 		"axios": "^0.21.1",
+		"cross-env": "^7.0.3",
 		"faker": "^5.5.3",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
 		"i": "^0.3.7",
 		"lodash": "^4.17.21",
-		"lottie-react": "^2.1.0",
 		"msw": "^0.35.0",
-		"next": "10.0.5",
+		"next": "12.0.2",
 		"npm": "^8.1.1",
 		"orval": "^6.2.3",
 		"path": "^0.12.7",
-		"react": "17.0.1",
+		"react": "17.0.2",
 		"react-color": "^2.19.3",
-		"react-dom": "17.0.1",
+		"react-dom": "17.0.2",
 		"react-dropzone": "^11.4.2",
 		"react-i18next": "^11.11.4",
 		"react-loading-skeleton": "^2.2.0",
+		"react-lottie": "^1.2.3",
 		"react-modal": "^3.14.3",
 		"react-query": "^3.13.4",
 		"react-select": "^4.3.1",
@@ -58,42 +61,11 @@
 		"use-supabase": "^1.0.3"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.10",
-		"@babel/preset-env": "^7.12.11",
-		"@babel/preset-react": "^7.12.10",
-		"@capacitor/cli": "^3.2.5",
-		"@next/plugin-storybook": "^10.0.5",
-		"@storybook/addon-actions": "^6.1.14",
-		"@storybook/addon-essentials": "^6.1.14",
-		"@storybook/addon-links": "^6.1.14",
-		"@storybook/addon-viewport": "^6.1.14",
-		"@storybook/addons": "^6.1.14",
-		"@storybook/node-logger": "^6.1.14",
-		"@storybook/react": "^6.1.14",
-		"@storybook/theming": "^6.1.14",
-		"@svgr/webpack": "^5.5.0",
-		"@testing-library/dom": "^7.29.4",
-		"@testing-library/jest-dom": "^5.11.9",
-		"@testing-library/react": "^11.2.3",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.20",
-		"@types/node": "^14.14.21",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
-		"autoprefixer": "^10.2.1",
-		"babel-core": "7.0.0-bridge.0",
-		"babel-jest": "^26.6.3",
-		"chokidar": "^3.5.1",
-		"chokidar-cli": "^2.1.0",
-		"cross-env": "^7.0.3",
-		"ignore-loader": "^0.1.2",
-		"jest": "^26.6.3",
-		"npm-run-all": "^4.1.5",
-		"react-test-renderer": "^17.0.1",
-		"sharp": "^0.27.0",
-		"storybook": "^6.1.14",
-		"storybook-addon-next-router": "^2.0.3",
-		"typescript": "^4.1.3"
+		"@types/node": "16.11.6",
+		"@types/react": "17.0.33",
+		"eslint": "7.32.0",
+		"eslint-config-next": "12.0.2",
+		"typescript": "4.4.4"
 	},
 	"resolutions": {
 		"react": "17.0.1"
