--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"react-query": "^3.13.4",
 		"react-select": "^4.3.1",
 		"react-textarea-autosize": "^8.3.2",
+		"universal-cookie": "^4.0.4",
 		"use-supabase": "^1.0.3"
 	},
 	"devDependencies": {
